# php-periscope

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  composer.json
.claude/: .gitignore
.claude/commands/: create_plan_generic.md  implement_plan.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  crash_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  jetbrains-plugin.yml  link-check.yml  vscode-extension.yml
Formula/: php-periscope.rb
daemon/: Cargo.toml  build.rs
daemon/src/: api.rs  dap.rs  event_filter.rs  ext_link.rs  grouping.rs  insights.rs  lib.rs  summary.rs  trace.rs  trace_view.rs
daemon/src/replay/: cursor.rs  index.rs  mod.rs  state.rs
daemon/tests/: client_metrics.rs  dap_breakpoint.rs  roundtrip.rs  ws_cursor.rs  ws_fanout.rs
docs/: ARCHITECTURE.md  POSITIONING.md  ROADMAP.md  SCOPE.md  VISION.md
docs/site/: index.md  package-lock.json  package.json
extension/: .gitignore  config.m4  package.xml  periscope.c  periscope_capture.c  periscope_capture.h  periscope_daemon_link.c  periscope_daemon_link.h  periscope_filter.c  periscope_filter.h  periscope_trace.cc  periscope_trace.h  periscope_userland.c  periscope_userland.h  php_periscope.h
extension/tests/: 001-loads.phpt  002-version.phpt  003-phpinfo.phpt  004-no-functions.phpt  004-userland-functions.phpt  010-observer-userland.phpt  011-observer-skip-internal.phpt  012-observer-include-internal.phpt  013-observer-method.phpt  014-observer-recursion.phpt  020-capture-array.phpt  021-capture-object.phpt  (+14 more)
jetbrains-plugin/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
laravel-adapter/: .gitignore  composer.json
proto/: trace.capnp
scripts/: bench-vs-xdebug.sh  install.sh  smoke-laravel-adapter.sh  smoke.sh  uninstall.sh
ui/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
vscode-extension/: .gitignore  .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
(+153 files in other folders)
