[package]
name = "periscope-daemon"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.75"
license = "Proprietary"
description = "DAP server, replay engine, and trace reader for php-periscope"
publish = false

[[bin]]
name = "periscope-dump"
path = "src/bin/dump.rs"

[[bin]]
name = "periscope-daemon"
path = "src/bin/daemon.rs"

[lib]
name = "periscope_daemon"
path = "src/lib.rs"

[dependencies]
capnp     = "0.21"
memmap2   = "0.9"
clap      = { version = "4.5", features = ["derive", "env"] }
anyhow    = "1.0"
thiserror = "1.0"
serde     = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio     = { version = "1.42", features = ["rt-multi-thread", "macros", "io-util", "io-std", "net", "fs", "sync", "signal", "time"] }
axum      = { version = "0.7", default-features = false, features = ["http1", "tokio", "json", "query"] }
tower     = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing   = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2      = "0.10"
hex       = "0.4"

[build-dependencies]
capnpc = "0.21"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = true
